--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 langchain
 langchain-core
 langchain-community
+langchain-google-genai
 langgraph
 google-generativeai
+langchain-groq
 groq
 faiss-cpu
 pypdf
@@ -14,3 +16,10 @@ python-dotenv
 rich
 fastapi
 uvicorn
+pydantic
+tiktoken
+langchain-text-splitters
+sentence-transformers
+hf_xet
+ipywidgets
+IPython-display
